working with SCSS

--- a/frontend/src/styles/comment.css
+++ b/frontend/src/styles/comment.css
@@ -5,21 +5,59 @@
 body, html, #root, .App, div {
     height: 100%;
     width:100%;
+    font-family: 'Arial','Helvetica','sans-serif';
 }
 body{
     background: #2e3436 url("/images/noise.png");
     overflow: auto;
 }
-.navbar{
+header{
+    position:fixed;
+    top:0;
+    width:100%;
     height: 80px;
     background-color:#202628;
     color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    padding:15px 30px 15px 0;
 }
+
+header img {
+    height:50px;
+}
+
+header nav{
+    text-align:right;
+}
+
+header nav ul li{
+    display: inline-block;
+    margin-top:15px;
+}
+
+header nav ul li a{
+    color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-left:25px;
+    border: none;
+    padding-bottom:10px;
+}
+
+header nav ul li a:hover{
+    border-bottom: 4px solid #CD7300 ;
+}
+
+
+
+
+
+
 aside{
     display: none;
-    margin:0;
-    float: left;
+    position:fixed;
+    left:0;
+    top:80px;
     background-color: #CD7300;
     color: white;
     width:0;
@@ -34,7 +72,7 @@ aside.open{
     display: block;
     animation: 5s;
     width:230px;
-    z-index: 0;
+    z-index: -1;
 }
 
 aside h4{
@@ -59,7 +97,6 @@ aside ul{
     margin:0;
     padding: 10px 0;
     list-style-type: none;
-    height:100%;
     width:100%;
 }
 
