--- a/frontend/src/styles/dependencies/general.scss
+++ b/frontend/src/styles/dependencies/general.scss
@@ -11,3 +11,8 @@ body{
     background: #2e3436 url("/images/noise.png");
     overflow: auto;
 }
+
+.flex-item{
+    flex:1;
+    margin: 0 10px;
+}
