--- a/frontend/src/styles/dependencies/header.scss
+++ b/frontend/src/styles/dependencies/header.scss
@@ -1,35 +1,37 @@
 header{
-    position:fixed;
-    top:0;
-    width:100%;
+    min-width:100%;
     height: 80px;
     background-color: $header;
     color: $white;
     box-shadow: 0 0 10px $shadow;
-    padding:15px 30px 15px 0;
+    padding:15px 30px;
+    display:flex;
+    position:fixed;
     img {
         height:50px;
     }
     nav{
-        text-align:right;
-    
-        ul li{
-            display: inline-block;
-            margin-top:15px;
-            
-            a{
-                color: $white;
-                font-weight: bold;
-                text-transform: uppercase;
-                margin-left:25px;
-                border: none;
-                padding-bottom:10px;
+        align-self: center;
+        flex:1;
+        ul{
+            float:right;
+            li{
+                display: inline-block;
+                a{
+                    color: $white;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    margin-left:25px;
+                    border: none;
+                    padding-bottom:10px;
 
-                &:hover{
-                    border-bottom: 4px solid $orange ;
+                    &:hover{
+                        border-bottom: 4px solid $orange ;
+                    }
                 }
-            }
+                }
         }
     }
+    
 
 }
