--- a/frontend/src/styles/dependencies/general.scss
+++ b/frontend/src/styles/dependencies/general.scss
@@ -16,3 +16,13 @@ body{
     flex:1;
     margin: 0 10px;
 }
+
+.butt{
+    display:block;
+    padding: 10px 20px;
+    text-align:center;
+    background-color: $orange;
+    color:$white;
+    margin: 0 auto;
+    cursor: pointer;
+}
