--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -414,6 +414,8 @@ h1, h2, h3, h4, h5, h6, p, a, ul {
   font-size: 1em;
   font-weight: normal; }
 
+/* colors */
+/**/
 * {
   padding: 0;
   margin: 0; }
@@ -430,6 +432,15 @@ body {
 .flex-item {
   flex: 1;
   margin: 0 10px; }
+
+.butt {
+  display: block;
+  padding: 10px 20px;
+  text-align: center;
+  background-color: #CD7300;
+  color: #fff;
+  margin: 0 auto;
+  cursor: pointer; }
 
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
@@ -567,8 +578,6 @@ body {
     width: 300px;
     margin: 0 0 20px 0;
     float: none; } }
-/* colors */
-/**/
 header {
   min-width: 100%;
   height: 80px;
@@ -597,26 +606,47 @@ header {
           header nav ul li a:hover {
             border-bottom: 4px solid #CD7300; }
 
-aside {
-  display: none;
+.openAside {
+  z-index: 1;
+  width: 40px;
   position: fixed;
   left: 0;
-  top: 80px;
+  box-shadow: 0 0 50px #000;
   background-color: #CD7300;
   color: #fff;
-  width: 0;
+  box-shadow: 0 0 50px #000;
+  top: 100px;
+  height: 30px; }
+  .openAside .arrow-right {
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-left: 15px solid #fff;
+    margin-left: 40px; }
+
+aside {
+  position: fixed;
+  left: 0;
+  box-shadow: 0 0 50px #000;
+  background-color: #CD7300;
+  color: #fff;
+  box-shadow: 0 0 50px #000;
+  top: 80px;
   height: 100%;
   font-size: 30px;
-  padding: 60px 20px;
-  /*line-height: 120px;*/
-  box-shadow: 0 0 50px #000; }
+  -webkit-transition: width 1s linear;
+  -moz-transition: width 1s linear;
+  -o-transition: width 1s linear;
+  transition: width 1s linear;
+  overflow-x: hidden;
+  z-index: 2;
+  width: 0;
+  padding: 0; }
   aside.open {
-    display: block;
-    animation: 5s;
-    width: 230px;
-    z-index: -1; }
+    width: 230px; }
   aside h4 {
-    margin: 0;
+    margin: 60px 20px;
     padding-top: 20px;
     font-size: 40px; }
   aside .close {
@@ -625,33 +655,63 @@ aside {
     padding: auto;
     float: right;
     position: relative;
-    top: -50px;
-    right: 0px;
+    top: 10px;
+    right: 20px;
     cursor: pointer; }
   aside ul {
-    margin: 0;
+    margin: 60px 20px;
     padding: 10px 0;
     list-style-type: none;
-    width: 100%; }
-  aside a {
-    display: block;
-    color: #fff;
-    text-decoration: none;
-    margin: 40px 0px;
-    padding: 0 5px; }
-  aside a:hover, aside .close:hover {
-    border: 2px solid #fff; }
+    width: calc(100%-40px); }
+    aside ul a {
+      display: block;
+      cursor: pointer;
+      color: #fff;
+      text-decoration: none;
+      margin: 40px 0px;
+      padding: 0 5px; }
+      aside ul a:hover, aside ul a.active {
+        border: 2px solid #fff; }
   aside .close {
     position: relative; }
+    aside .close:hover {
+      border: 2px solid #fff; }
 
 .comment-section {
-  margin: 100px 10px 0 10px;
-  width: calc(100% - 250px);
-  background-color: #fff;
+  margin: 130px 0 0 0;
+  width: calc(100% - 230px);
+  padding: 20px;
   float: right; }
+  .comment-section.open {
+    clear: both;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0; }
+
+.makeCommentary {
+  padding: 20px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: auto;
+  background-color: #202628;
+  color: #fff; }
+  .makeCommentary input, .makeCommentary textarea {
+    display: block;
+    width: 100%;
+    max-width: 200px;
+    margin: auto;
+    margin-bottom: 10px; }
+  .makeCommentary textarea {
+    height: 100px;
+    max-width: 500px; }
+  .makeCommentary select {
+    display: block;
+    margin: 10px auto 20px auto; }
 
 .commentary {
   padding: 20px;
+  margin-bottom: 20px;
+  width: 100%;
   height: auto;
   background-color: #202628;
   color: #fff; }
@@ -675,6 +735,9 @@ aside {
       .commentary .info .flex-item:nth-child(2) {
         text-align: center;
         flex-grow: 120; }
+  .open .commentary {
+    margin: 0;
+    margin-bottom: 20px; }
 
 .commentary-delete {
   padding: auto;
