--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -23,5 +23,6 @@ $color4: #000;
 
 @import "dependencies/header";
 @import "dependencies/aside";
+@import "dependencies/post";
 @import "dependencies/commentary";
 
