--- a/frontend/src/styles/dependencies/general.scss
+++ b/frontend/src/styles/dependencies/general.scss
@@ -26,3 +26,17 @@ body{
     margin: 0 auto;
     cursor: pointer;
 }
+
+.modal{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index:5;
+    text-align:center;
+}
+
+.modal-user{
+    max-width:100%;
+    z-index:9999999;
+}
