Posts and Commentaries to store

--- a/frontend/src/styles/dependencies/header.scss
+++ b/frontend/src/styles/dependencies/header.scss
@@ -19,6 +19,7 @@ header{
             li{
                 display: inline-block;
                 a{
+                    cursor: pointer;
                     color: $white;
                     font-weight: bold;
                     text-transform: uppercase;
