--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -442,17 +442,50 @@ body {
   margin: 0 auto;
   cursor: pointer; }
 
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 5;
-  text-align: center; }
+/*
+.modal{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index:5;
+    text-align:center;
 
-.modal-user {
-  max-width: 100%;
-  z-index: 9999999; }
+*/
+.modal-app {
+  height: 60px;
+  max-height: 100%; }
+  .modal-app * {
+    margin-left: 10px; }
+
+.modal-edit {
+  height: 60px;
+  max-height: 100%;
+  height: 240px; }
+  .modal-edit * {
+    margin-left: 10px; }
+  .modal-edit * {
+    display: block;
+    margin: 8px auto;
+    text-align: center; }
+  .modal-edit h1 {
+    margin-bottom: 15px;
+    font-size: 35px; }
+  .modal-edit textarea {
+    display: block;
+    width: 100%;
+    max-width: 200px;
+    margin: 0 auto 10px auto; }
+
+/*
+.modal-user{
+    max-width:100%;
+    z-index:9999999;
+}*/
+.select_sort {
+  background-color: #fff;
+  z-index: 99999;
+  margin-bottom: 10px; }
 
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
@@ -753,16 +786,21 @@ aside {
     margin: 0;
     margin-bottom: 20px; }
 
-.post-delete {
+.post-top {
   padding: auto;
   width: auto;
   height: auto;
   padding: 2px;
   float: right;
+  font-size: 15px;
   cursor: pointer;
   z-index: 1; }
-  .post-delete:hover {
+  .post-top:hover {
     border: 1px solid #fff; }
+  .post-top.left {
+    margin-right: 10px; }
+    .post-top.left .material-icons {
+      font-size: 15px; }
 
 .votebox {
   height: 38px;
@@ -871,7 +909,7 @@ aside {
     float: right;
     padding: 0;
     top: 10px;
-    left: -40px;
+    left: -60px;
     color: black;
     font-size: 10px; }
   .commentary .score {
@@ -889,6 +927,20 @@ aside {
     width: auto;
     cursor: pointer; }
   .commentary .delete-comment:hover {
+    border: 1px solid #000; }
+  .commentary .edit-comment {
+    float: right;
+    position: relative;
+    top: 7px;
+    left: 90px;
+    color: black;
+    text-align: right;
+    width: auto;
+    cursor: pointer;
+    margin-right: 10px; }
+    .commentary .edit-comment .material-icons {
+      font-size: 15px; }
+  .commentary .edit-comment:hover {
     border: 1px solid #000; }
 
 .tri {
